--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "argon2": "^0.27.1",
     "connect-redis": "^5.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
+    "express-session": "1.17.1",
     "graphql": "^15.4.0",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
