--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,11 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/ioredis": "^4.19.3",
     "@types/node": "^14.14.21",
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
+    "@types/uuid": "^8.3.0",
     "class-validator": "^0.13.1",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
@@ -42,7 +44,6 @@
     "ioredis": "^4.19.4",
     "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
-    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "uuid": "^8.3.2"
